# health

./: .gitignore  Cargo.toml  Containerfile  config.example.toml  config.toml
.github/workflows/: deploy.yml  push-container.yml  test.yml
client/: index.html  vite.config.ts
client/src/: app.css  app.tsx  types.ts  utils.ts
client/src/components/: Graph.tsx  Ticks.module.css  Ticks.tsx
client/src/pages/: Endpoint.module.css  Endpoint.tsx  Index.module.css  Index.tsx
sql/: setup.sql
src/: config.rs  db.rs  main.rs  notify.rs  poll.rs  serve.rs
src/api/: mod.rs
src/db/: mod.rs
