[package]
name = "health"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
reqwest = "0.12.15"
rusqlite = { version = "0.35.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.28.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
toml = "0.8.22"
tower = "0.5.2"
tower-http = {version = "0.6.2", features = ["fs", "cors"] }
dotenv = "0.15.0"
